--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
       stroke: none;
     }
 
-    /* Dim hidden legend items */
-    .legend.hidden text {
+    /* Dim non-focused legend items when focusing */
+    .legend.dim text {
       opacity: 0.35;
     }
 
-    .legend.hidden rect {
+    .legend.dim rect {
       opacity: 0.3;
     }
 
@@ -233,8 +233,8 @@
     <svg id="chart" width="900" height="420"></svg>
     <div class="hint">
       Use Zoom in / Zoom out / Reset to adjust the time range.
-      When zoomed, drag left/right and up/down inside the chart to move the view.
-      Click legend items to hide or show each line.
+      Drag left or right inside the chart to move the time window.
+      Click legend items to focus on one line; click again to go back.
     </div>
 
     <div id="tooltip" class="tooltip" style="opacity: 0;"></div>
@@ -306,14 +306,11 @@
     const zoomOutBtn = d3.select("#zoom-out");
     const zoomResetBtn = d3.select("#zoom-reset");
 
-    // Drag state
+    // Drag for horizontal pan
     let isDragging = false;
     let dragStartX = null;
-    let dragStartY = null;
     let dragStartXDomain = null;
-    let dragStartYDomain = null;
 
-    // Normalize state names to avoid duplicates
     function normalizeStateName(name) {
       if (!name) return name;
       let cleaned = name.replace(/\*/g, "").trim();
@@ -353,15 +350,14 @@
       { id: "share_newly", label: "Newly eligible VIII \u00f7 Total Medicaid", color: "#2ca02c" }
     ];
 
-    const visibilityCounts = { total: true, viii: true, newly: true };
-    const visibilityShare  = { share_viii: true, share_newly: true };
-
     let rawData = [];
     let currentState = null;
     let currentMode = "counts";
     let currentSeriesData = [];
-    let fullDomain = null;       // x full domain for state
-    let yUserDomain = null;      // custom y-domain when zooming/panning
+    let fullDomain = null;     // full x-domain for state
+
+    let focusedCountsId = null;
+    let focusedShareId  = null;
 
     const legendG = chartG.append("g")
       .attr("class", "legend")
@@ -404,7 +400,6 @@
     function zoomBy(factor) {
       if (!fullDomain) return;
 
-      // X zoom
       const domain = xScale.domain();
       const center = (domain[0].getTime() + domain[1].getTime()) / 2;
       const span = domain[1] - domain[0];
@@ -429,26 +424,6 @@
       }
 
       xScale.domain([newStart, newEnd]);
-
-      // Y zoom (scale current y-domain)
-      const currY = yScale.domain();
-      const yCenter = (currY[0] + currY[1]) / 2;
-      let ySpan = (currY[1] - currY[0]) * factor;
-      if (ySpan <= 0) ySpan = currY[1] - currY[0] || 1;
-
-      let y0 = yCenter - ySpan / 2;
-      let y1 = yCenter + ySpan / 2;
-
-      if (currentMode === "share") {
-        y0 = Math.max(0, y0);
-        y1 = Math.min(100, y1);
-        if (y1 <= y0) { y0 = 0; y1 = 100; }
-      } else {
-        if (y1 <= y0) { y0 = Math.max(0, currY[0]); y1 = currY[1]; }
-      }
-
-      yUserDomain = [y0, y1];
-
       updateChart(currentState, currentMode, true);
     }
 
@@ -493,14 +468,16 @@
         stateSelect.on("change", () => {
           currentState = stateSelect.property("value");
           fullDomain = null;
-          yUserDomain = null;
+          focusedCountsId = null;
+          focusedShareId  = null;
           updateChart(currentState, currentMode, false);
         });
 
         modeInputs.on("change", (event) => {
           currentMode = event.target.value;
+          focusedCountsId = null;
+          focusedShareId  = null;
           fullDomain = null;
-          yUserDomain = null;
           updateChart(currentState, currentMode, false);
         });
 
@@ -509,7 +486,8 @@
         zoomResetBtn.on("click", () => {
           if (!fullDomain) return;
           xScale.domain(fullDomain);
-          yUserDomain = null;
+          focusedCountsId = focusedCountsId; // keep focus, but reset x
+          focusedShareId  = focusedShareId;
           updateChart(currentState, currentMode, true);
         });
 
@@ -517,11 +495,9 @@
           .on("mousedown", function(event) {
             if (!fullDomain) return;
             isDragging = true;
-            const [mx, my] = d3.pointer(event, this);
+            const [mx] = d3.pointer(event, this);
             dragStartX = mx;
-            dragStartY = my;
             dragStartXDomain = xScale.domain().map(d => new Date(d));
-            dragStartYDomain = yScale.domain().slice();
           });
 
         d3.select(window).on("mouseup", () => {
@@ -530,17 +506,15 @@
 
         overlay
           .on("mousemove", function(event) {
-            const [mx, my] = d3.pointer(event, this);
+            const [mx] = d3.pointer(event, this);
 
-            if (isDragging && dragStartXDomain && dragStartYDomain && fullDomain) {
+            if (isDragging && dragStartXDomain && fullDomain) {
               const dx = mx - dragStartX;
-              const dy = my - dragStartY;
-
-              // Horizontal pan
               const xSpan = dragStartXDomain[1] - dragStartXDomain[0];
               const offsetMs = -dx / width * xSpan;
+
               let newStart = new Date(dragStartXDomain[0].getTime() + offsetMs);
-              let newEnd = new Date(dragStartXDomain[1].getTime() + offsetMs);
+              let newEnd   = new Date(dragStartXDomain[1].getTime() + offsetMs);
 
               if (newStart < fullDomain[0]) {
                 newStart = fullDomain[0];
@@ -550,31 +524,13 @@
                 newEnd = fullDomain[1];
                 newStart = new Date(newEnd.getTime() - xSpan);
               }
+
               xScale.domain([newStart, newEnd]);
-
-              // Vertical pan
-              const ySpan = dragStartYDomain[1] - dragStartYDomain[0];
-              const offsetVal = -dy / height * ySpan;
-              let y0 = dragStartYDomain[0] + offsetVal;
-              let y1 = dragStartYDomain[1] + offsetVal;
-
-              if (currentMode === "share") {
-                if (y1 - y0 < 1) {
-                  const mid = (y0 + y1) / 2;
-                  y0 = mid - 0.5;
-                  y1 = mid + 0.5;
-                }
-                y0 = Math.max(0, y0);
-                y1 = Math.min(100, y1);
-              }
-
-              yUserDomain = [y0, y1];
-
               updateChart(currentState, currentMode, true);
               return;
             }
 
-            // Tooltip (only when not dragging)
+            // Tooltip (no drag)
             if (!currentSeriesData.length) return;
 
             const x0 = xScale.invert(mx);
@@ -704,16 +660,9 @@
         ];
       }
 
-      let seriesData;
-      if (mode === "counts") {
-        seriesData = seriesDataAll.filter(s => visibilityCounts[s.id] !== false);
-      } else {
-        seriesData = seriesDataAll.filter(s => visibilityShare[s.id] !== false);
-      }
+      currentSeriesData = seriesDataAll;
 
-      currentSeriesData = seriesData;
-
-      if (!seriesData.length || !seriesData[0].values.length) {
+      if (!seriesDataAll.length || !seriesDataAll[0].values.length) {
         lineGroup.selectAll("path.series").remove();
         noDataText.style("display", null);
         return;
@@ -722,11 +671,20 @@
       if (!keepXDomain || !fullDomain) {
         fullDomain = d3.extent(stateRows, d => d.date);
         xScale.domain(fullDomain);
-        if (!keepXDomain) yUserDomain = null;
       }
 
       const domain = xScale.domain();
-      const visibleValues = seriesData.flatMap(s =>
+
+      // Decide which series to use for y scaling: focused or all
+      let focusId = (mode === "counts") ? focusedCountsId : focusedShareId;
+      let domainSeries;
+      if (focusId) {
+        domainSeries = seriesDataAll.filter(s => s.id === focusId);
+      } else {
+        domainSeries = seriesDataAll;
+      }
+
+      const visibleValues = domainSeries.flatMap(s =>
         s.values
           .filter(v => v.date >= domain[0] && v.date <= domain[1])
           .map(v => v.value)
@@ -742,23 +700,16 @@
       const range = (maxVal - minVal) || maxVal || 1;
       const padding = range * 0.1;
 
-      let baseDomain;
       if (mode === "share") {
-        baseDomain = [
+        yScale.domain([
           Math.max(0, minVal - padding),
           Math.min(100, maxVal + padding)
-        ];
+        ]);
       } else {
-        baseDomain = [
+        yScale.domain([
           Math.max(0, minVal - padding),
           maxVal + padding
-        ];
-      }
-
-      if (yUserDomain == null) {
-        yScale.domain(baseDomain);
-      } else {
-        yScale.domain(yUserDomain);
+        ]);
       }
 
       drawXAxis();
@@ -802,29 +753,26 @@
       legendMerge.select("rect").attr("fill", d => d.color);
       legendMerge.select("text").text(d => d.label);
 
+      // Legend click: toggle focus
       legendMerge.on("click", (event, d) => {
         if (mode === "counts") {
-          visibilityCounts[d.id] = !visibilityCounts[d.id];
+          focusedCountsId = (focusedCountsId === d.id) ? null : d.id;
         } else {
-          visibilityShare[d.id] = !visibilityShare[d.id];
+          focusedShareId  = (focusedShareId === d.id) ? null : d.id;
         }
-        yUserDomain = null; // recalc y from visible lines
-        updateChart(currentState, currentMode, false);
+        updateChart(currentState, currentMode, true);
       });
 
       legendItems.exit().remove();
 
       legendG.selectAll("g.legend-item")
-        .classed("hidden", d => {
-          if (mode === "counts") {
-            return visibilityCounts[d.id] === false;
-          } else {
-            return visibilityShare[d.id] === false;
-          }
+        .classed("dim", d => {
+          const focus = (mode === "counts") ? focusedCountsId : focusedShareId;
+          return focus && d.id !== focus;
         });
 
       const lines = lineGroup.selectAll("path.series")
-        .data(seriesData, d => d.id);
+        .data(seriesDataAll, d => d.id);
 
       lines.enter()
         .append("path")
@@ -832,7 +780,11 @@
         .attr("stroke", d => d.color)
         .merge(lines)
         .transition()
-        .attr("d", d => lineGenerator(d.values));
+        .attr("d", d => lineGenerator(d.values))
+        .style("opacity", d => {
+          const focus = (mode === "counts") ? focusedCountsId : focusedShareId;
+          return focus && d.id !== focus ? 0.25 : 1;
+        });
 
       lines.exit().remove();
     }
